add Discord Lists card

--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
 	<h2 class="white font-weight-bold">Check out some of my projects! I would really appreciate it.</h2><br><br><br>
 	<div class="cards-list">
 
+<a href="https://discordlists100.xyz">
+  <div class="card-marcus card 2">
+  <div class="card_image">
+    <img src="https://cdn.discordapp.com/attachments/870296629134114817/870305666978439208/Discord_Lists_V6_Logo.png" alt="Discord Lists Bot List"/>
+    </div>
+  <div class="card_title title-white">
+    <p>Discord Lists</p>
+  </div>
+</div>
+</a>
+
 <a href="https://aaditjpeg.ga">
 <div class="card 3">
   <div class="card_image">
@@ -140,7 +151,7 @@
 </div>
 </div>
 <br><br><br>
-<footer class="footer w3-highway-black foot center">
+<footer class="footer foot center" style="background: #121212;">
 	<br>
 	<p>©2021 <a href="https://discord.com/users/693116936871084063" target="_blank" rel="noreferrer noopener" class="footer-text">MasterMind#6098</a></p>
 	<br>
