--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
 	<h2 class="white font-weight-bold">Check out some of my projects! I would really appreciate it.</h2><br><br><br>
 	<div class="cards-list">
 
+<a href="https://brawlemotes.xyz">
+<div class="card 3">
+  <div class="card_image">
+    <img src="./brawlemotes.png" alt="Brawl Emotes (https://brawlemotes.xyz)" />
+  </div>
+  <div class="card_title title-white">
+    <p>Brawl Emotes</p>
+  </div>
+</div>
+ </a>
+ 
 <a href="https://discordlists100.xyz">
   <div class="card-marcus card 2">
   <div class="card_image">
@@ -139,6 +150,7 @@
 
 
 
+
 <!--   <div class="card 4">
   <div class="card_image">
     <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
@@ -153,7 +165,7 @@
 <br><br><br>
 <footer class="footer foot center" style="background: #121212;">
 	<br>
-	<p>©2021 <a href="https://discord.com/users/693116936871084063" target="_blank" rel="noreferrer noopener" class="footer-text">MasterMind#6098</a></p>
+	<p>©2021 <a href="https://discord.com/users/693116936871084063" target="_blank" rel="noreferrer noopener" class="footer-text">MasterMind#2023</a></p>
 	<br>
 
 
