--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta name="keywords" content="MasterMind, MeMasterMind, Arpan ">
   <meta name="author" content="MasterMind">
   <meta name="copyright" content="MasterMind">
-  <meta name="description" content="Welcome to  MasterMind's official website!">
+  <meta name="description" content="Welcome to my official website!">
   <meta name="page-type" content="Personal">
   <meta name="audience" content="Everyone">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#ffdd00">
-  <meta name="google-site-verification" content="vLvEesOJkI9fHq-_vgGBkG14Om8sMT7AGRR1Qr2ZryA" />
+  <meta name="google-site-verification" content="h-xMERI5aMSGZiKB-wru9113Gyvnf7MLUbT_QsHylzo" />
   <meta property="og:image" content="https://ik.imagekit.io/arpantaneja/logo_XH4fmJ53g.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MasterMind</title>
