--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <br>
 
 <div id="links">
-	<h2 class="white font-weight-bold">Check out some of my projects! I would really appreciate it.</h2><br><br><br>
+	<h2 class="white font-weight-bold">Some websites I made:</h2><br><br><br>
 	<div class="cards-list">
 
 <a href="https://brawlemotes.xyz">
@@ -159,6 +159,10 @@
 
 </footer>
 
-
+<script type="text/javascript">
+  if(window.location.href === "https://memastermind.tk" || "memastermind.tk" || "https://memastermind.tk/"){
+    location = "https://mastermind.tk/"
+  }
+</script>
 </body>
 </html>
