--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 </footer>
 
 <script type="text/javascript">
-  if(window.location.href === "https://memastermind.tk" || "memastermind.tk" || "https://memastermind.tk/"){
+  if(location === "https://memastermind.tk/"){
     location = "https://mastermind.tk/"
   }
 </script>
