--- a/index.html
+++ b/index.html
@@ -160,9 +160,7 @@
 </footer>
 
 <script type="text/javascript">
-  if(location === "https://memastermind.tk/"){
-    location = "https://mastermind.tk/"
-  }
+if(location.href==="https://memastermind.tk/"){location.href = "https://mastermind.tk"}
 </script>
 </body>
 </html>
