--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta name="keywords" content="MasterMind, MeMasterMind, Arpan ">
+  <meta name="keywords" content="MasterMind, MeMasterMind ">
   <meta name="author" content="MasterMind">
   <meta name="copyright" content="MasterMind">
   <meta name="description" content="Welcome to my official website!">
@@ -78,13 +78,13 @@
   <rect x="3" y="5" width="18" height="14" rx="2" />
   <polyline points="3 7 12 13 21 7" />
 </a>
-<a style="cursor: pointer;" href="#links">
+<!-- <a style="cursor: pointer;" href="#links">
 	<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-link" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffdd00" fill="none" stroke-linecap="round" stroke-linejoin="round">
   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
   <path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" />
   <path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" />
 </svg>
-</a>
+</a> -->
 
 </svg>
 </div>
